--- a/app/src/main/res/layout/activity_exercises_counter.xml
+++ b/app/src/main/res/layout/activity_exercises_counter.xml
@@ -10,8 +10,7 @@
         android:id="@+id/VP2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation2"
-        />
+        android:layout_above="@+id/bottom_navigation2" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation2"
