--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="20dp"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <TextView
@@ -16,45 +15,45 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:text="Login"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Email"
-        android:textColor="@color/black"
-        android:layout_marginTop="30dp"/>
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/etLoginUsername"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:padding="10dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:background="@drawable/background_edit_text"
         android:layout_marginTop="10dp"
-        android:hint="Enter username..." />
+        android:background="@drawable/background_edit_text"
+        android:ems="10"
+        android:hint="Enter username..."
+        android:inputType="textPersonName"
+        android:padding="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Password"
-        android:textColor="@color/black"
-        android:layout_marginTop="30dp"/>
+        android:textColor="@color/black" />
 
     <EditText
         android:id="@+id/etLoginPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:padding="10dp"
-        android:background="@drawable/background_edit_text"
         android:layout_marginTop="10dp"
+        android:background="@drawable/background_edit_text"
         android:ems="10"
         android:hint="Enter Password..."
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:padding="10dp" />
 
     <Button
         android:id="@+id/btnLoginBotton"
