--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -8,9 +8,9 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         card_view:cardCornerRadius="10dp">
@@ -31,22 +31,22 @@
                 android:id="@+id/tvTitleExercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="YES"
-                android:padding="5dp"
-                android:textColor="@color/black"
                 android:layout_below="@+id/ivImageExercise"
+                android:padding="5dp"
+                android:text="YES"
+                android:textColor="@color/black"
                 android:textSize="30sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvDescriptionExercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-10dp"
                 android:layout_below="@+id/tvTitleExercise"
-                android:textColor="@color/black"
+                android:layout_marginTop="-10dp"
                 android:padding="5dp"
-                android:text="Description"/>
+                android:text="Description"
+                android:textColor="@color/black" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
