--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -17,73 +17,73 @@
         android:id="@+id/tvSearchUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/ivSearchProfilePic"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
-        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@+id/ivSearchProfilePic"
+        android:text="Username"
+        android:textColor="@color/black"
         android:textSize="20dp"
-        android:text="Username"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvSearchPushups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/ivSearchProfilePic"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_below="@+id/tvSearchUsername"
-        android:text="Push Ups"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/ivSearchProfilePic"
+        android:text="Push Ups" />
 
     <TextView
         android:id="@+id/tvSearchPushupsNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tvSearchPushups"
         android:layout_below="@+id/tvSearchUsername"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:text="0"/>
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/tvSearchPushups"
+        android:text="0" />
 
     <TextView
         android:id="@+id/tvSearchSitups"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/tvSearchPushupsNo"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/tvSearchUsername"
-        android:text="Sit Ups"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/tvSearchPushupsNo"
+        android:text="Sit Ups" />
 
     <TextView
         android:id="@+id/tvSearchSitupsNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tvSearchSitups"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/tvSearchUsername"
         android:layout_marginLeft="10dp"
-        android:text="0"/>
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/tvSearchSitups"
+        android:text="0" />
 
     <TextView
         android:id="@+id/tvSearchSquats"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tvSearchUsername"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/tvSearchSitupsNo"
-        android:layout_below="@+id/tvSearchUsername"
-        android:text="Squats"/>
+        android:text="Squats" />
 
     <TextView
         android:id="@+id/tvSearchSquatsN0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tvSearchSquats"
         android:layout_below="@+id/tvSearchUsername"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:text="0"/>
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/tvSearchSquats"
+        android:text="0" />
 
 
 </RelativeLayout>
