removed example from directory

--- a/app/src/main/res/layout/fragment_pushups.xml
+++ b/app/src/main/res/layout/fragment_pushups.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.PushupsFragment">
+    tools:context="com.lifestyle.fragment.PushupsFragment">
 
     <TextView
         android:id="@+id/pushupCount"
