--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context=".fragment.SearchFragment">
+    tools:context="com.lifestyle.fragment.SearchFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
