--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context="com.lifestyle.SignupActivity">
 
     <TextView
         android:id="@+id/textView"
