--- a/app/src/main/res/layout/fragment_situps.xml
+++ b/app/src/main/res/layout/fragment_situps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SitupsFragment">
+    tools:context="com.lifestyle.fragment.SitupsFragment">
 
     <TextView
         android:id="@+id/situpCount"
