--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="20dp"
     android:orientation="vertical"
-    tools:context="com.lifestyle.LoginActivity">
+    tools:context="com.lifestyle.activities.LoginActivity">
 
     <TextView
         android:id="@+id/textView"
