--- a/app/src/main/res/layout/fragment_squats.xml
+++ b/app/src/main/res/layout/fragment_squats.xml
@@ -29,13 +29,15 @@
         app:layout_constraintTop_toBottomOf="@+id/squatsCount" />
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/animationView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         app:layout_constraintBottom_toTopOf="@+id/squatsDoneButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/squatsButton"
         app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         app:lottie_rawRes="@raw/squat"/>
 
     <Button
